# 3D-OpenGL-C-Game-Engine

./: CMakeLists.txt  GameEngine.cpp
Assets/Models/monkey/: monkey.mtl
Core/: Application.cpp  Application.h  CameraLayer.cpp  CameraLayer.h  InputLayer.cpp  InputLayer.h  Layer.h  MouseInputs.cpp  MouseInputs.h  TimeLayer.cpp  TimeLayer.h  WindowLayer.cpp  WindowLayer.h
Renderer/: AssetsManager.h  Model.h  RendererLayer.cpp  RendererLayer.h  Shader.cpp  Shader.h
Scene/: Components.h  SceneLayer.cpp  SceneLayer.h
Shaders/: cube.f  cube.v  triangle.v
